took out hackD and just general info. still need to fix picture alignments

--- a/Assets/styles/cover.css
+++ b/Assets/styles/cover.css
@@ -66,7 +66,7 @@ body {
 #contact {
   min-height: 750px;
   padding-top: 150px;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
 }
 
 .borderless td, th {
